Updated link and script url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,6 @@
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/img/icons/apple-touch-icon-114x114-precomposed.png">
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/img/icons/apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="/assets/img/icons/apple-touch-icon-precomposed.png">
-  <link rel="stylesheet" href="/assets/css/app.css">
+  <link rel="stylesheet" href="{{ root_url }}/assets/css/app.css">
 </head>
 <body>
