--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,3 +1,3 @@
-<script src="{{ root_url }}/assets/js/all.js"></script>
+<script src="{{ site.baseurl }}/assets/js/all.js"></script>
 </body>
 </html>
