--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
   
   </head>        
   <body>
-    
+    {{ content }}
     <!-- Loading JavaScripts
     ================================================== -->
 
