--- a/css/app.css
+++ b/css/app.css
@@ -390,8 +390,8 @@ body {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
-  color: #0a0a0a;
-  background: #fefefe;
+  color: #fefefe;
+  background: #333333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
@@ -1285,12 +1285,12 @@ h6 {
     font-size: 1rem; } }
 
 a {
-  color: #8bad93;
+  color: #25cbaf;
   text-decoration: none;
   line-height: inherit;
   cursor: pointer; }
   a:hover, a:focus {
-    color: #719b7b; }
+    color: #20af97; }
   a img {
     border: 0; }
 
@@ -1347,7 +1347,7 @@ cite {
     content: '\2014 \0020'; }
 
 abbr {
-  color: #0a0a0a;
+  color: #fefefe;
   cursor: help;
   border-bottom: 1px dotted #0a0a0a; }
 
@@ -1490,12 +1490,12 @@ kbd {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #8bad93;
+  background-color: #25cbaf;
   color: #fefefe; }
   [data-whatinput='mouse'] .button {
     outline: 0; }
   .button:hover, .button:focus {
-    background-color: #709a79;
+    background-color: #1fad95;
     color: #fefefe; }
   .button.tiny {
     font-size: 0.6rem; }
@@ -1509,11 +1509,11 @@ kbd {
     margin-left: 0;
     margin-right: 0; }
   .button.primary {
-    background-color: #8bad93;
-    color: #0a0a0a; }
+    background-color: #25cbaf;
+    color: #fefefe; }
     .button.primary:hover, .button.primary:focus {
-      background-color: #679271;
-      color: #0a0a0a; }
+      background-color: #1ea28c;
+      color: #fefefe; }
   .button.secondary {
     background-color: #777;
     color: #fefefe; }
@@ -1539,19 +1539,19 @@ kbd {
       background-color: #da3116;
       color: #fefefe; }
   .button.hollow {
-    border: 1px solid #8bad93;
-    color: #8bad93; }
+    border: 1px solid #25cbaf;
+    color: #25cbaf; }
     .button.hollow, .button.hollow:hover, .button.hollow:focus {
       background-color: transparent; }
     .button.hollow:hover, .button.hollow:focus {
-      border-color: #415b47;
-      color: #415b47; }
+      border-color: #136658;
+      color: #136658; }
     .button.hollow.primary {
-      border: 1px solid #8bad93;
-      color: #8bad93; }
+      border: 1px solid #25cbaf;
+      color: #25cbaf; }
       .button.hollow.primary:hover, .button.hollow.primary:focus {
-        border-color: #415b47;
-        color: #415b47; }
+        border-color: #136658;
+        color: #136658; }
     .button.hollow.secondary {
       border: 1px solid #777;
       color: #777; }
@@ -1580,13 +1580,13 @@ kbd {
     opacity: 0.25;
     cursor: not-allowed; }
     .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-      background-color: #8bad93;
+      background-color: #25cbaf;
       color: #fefefe; }
     .button.disabled.primary, .button[disabled].primary {
       opacity: 0.25;
       cursor: not-allowed; }
       .button.disabled.primary:hover, .button.disabled.primary:focus, .button[disabled].primary:hover, .button[disabled].primary:focus {
-        background-color: #8bad93;
+        background-color: #25cbaf;
         color: #fefefe; }
     .button.disabled.secondary, .button[disabled].secondary {
       opacity: 0.25;
@@ -1790,7 +1790,7 @@ legend {
   padding: 1.25rem;
   margin: 1.125rem 0; }
   .fieldset legend {
-    background: #fefefe;
+    background: #333333;
     padding: 0 0.1875rem;
     margin: 0;
     margin-left: -0.1875rem; }
@@ -1962,7 +1962,7 @@ select {
   padding: 1.25rem 1rem;
   line-height: 1;
   font-size: 0.75rem;
-  color: #8bad93;
+  color: #25cbaf;
   position: relative;
   border: 1px solid #e6e6e6;
   border-bottom: 0; }
@@ -1986,7 +1986,7 @@ select {
   border: 1px solid #e6e6e6;
   border-bottom: 0;
   background-color: #fefefe;
-  color: #0a0a0a; }
+  color: #fefefe; }
   :last-child > .accordion-content:last-child {
     border-bottom: 1px solid #e6e6e6; }
 
@@ -1998,7 +1998,7 @@ select {
     width: 0;
     height: 0;
     border: inset 6px;
-    border-color: #8bad93 transparent transparent;
+    border-color: #25cbaf transparent transparent;
     border-top-style: solid;
     border-bottom-width: 0;
     position: absolute;
@@ -2019,8 +2019,8 @@ select {
   font-size: 0.6rem;
   text-align: center;
   border-radius: 50%;
-  background: #8bad93;
-  color: #0a0a0a; }
+  background: #25cbaf;
+  color: #fefefe; }
   .badge.secondary {
     background: #777;
     color: #fefefe; }
@@ -2056,7 +2056,7 @@ select {
       top: 1px;
       opacity: 1; }
   .breadcrumbs a {
-    color: #8bad93; }
+    color: #25cbaf; }
     .breadcrumbs a:hover {
       text-decoration: underline; }
   .breadcrumbs .disabled {
@@ -2119,11 +2119,11 @@ select {
       .button-group.expanded .button:first-child:nth-last-child(6):last-child, .button-group.expanded .button:first-child:nth-last-child(6):first-child:nth-last-child(6) ~ .button:last-child {
         margin-right: -6px; }
   .button-group.primary .button {
-    background-color: #8bad93;
-    color: #0a0a0a; }
+    background-color: #25cbaf;
+    color: #fefefe; }
     .button-group.primary .button:hover, .button-group.primary .button:focus {
-      background-color: #679271;
-      color: #0a0a0a; }
+      background-color: #1ea28c;
+      color: #fefefe; }
   .button-group.secondary .button {
     background-color: #777;
     color: #fefefe; }
@@ -2173,14 +2173,14 @@ select {
   border: 1px solid rgba(10, 10, 10, 0.25);
   border-radius: 0;
   position: relative;
-  color: #0a0a0a;
+  color: #fefefe;
   background-color: white; }
   .callout > :first-child {
     margin-top: 0; }
   .callout > :last-child {
     margin-bottom: 0; }
   .callout.primary {
-    background-color: #eef3ef; }
+    background-color: #ddf9f4; }
   .callout.secondary {
     background-color: #ebebeb; }
   .callout.success {
@@ -2244,7 +2244,7 @@ select {
     width: 0;
     height: 0;
     border: inset 6px;
-    border-color: transparent transparent transparent #8bad93;
+    border-color: transparent transparent transparent #25cbaf;
     border-left-style: solid;
     border-right-width: 0;
     position: absolute;
@@ -2258,7 +2258,7 @@ select {
   width: 0;
   height: 0;
   border: inset 6px;
-  border-color: transparent #8bad93 transparent transparent;
+  border-color: transparent #25cbaf transparent transparent;
   border-right-style: solid;
   border-left-width: 0;
   border-left-width: 0;
@@ -2267,7 +2267,7 @@ select {
   margin-right: 0.75rem; }
 
 .dropdown-pane {
-  background-color: #fefefe;
+  background-color: #333333;
   border: 1px solid #cacaca;
   border-radius: 0;
   display: block;
@@ -2309,7 +2309,7 @@ select {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: #8bad93 transparent transparent;
+  border-color: #25cbaf transparent transparent;
   border-top-style: solid;
   border-bottom-width: 0;
   right: 5px;
@@ -2342,7 +2342,7 @@ select {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent #8bad93 transparent transparent;
+  border-color: transparent #25cbaf transparent transparent;
   border-right-style: solid;
   border-left-width: 0; }
 
@@ -2352,7 +2352,7 @@ select {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent transparent transparent #8bad93;
+  border-color: transparent transparent transparent #25cbaf;
   border-left-style: solid;
   border-right-width: 0; }
 
@@ -2374,7 +2374,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: #8bad93 transparent transparent;
+    border-color: #25cbaf transparent transparent;
     border-top-style: solid;
     border-bottom-width: 0;
     right: 5px;
@@ -2396,7 +2396,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #8bad93 transparent transparent;
+    border-color: transparent #25cbaf transparent transparent;
     border-right-style: solid;
     border-left-width: 0; }
   .dropdown.menu.medium-vertical > li.opens-right > a::after {
@@ -2405,7 +2405,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #8bad93;
+    border-color: transparent transparent transparent #25cbaf;
     border-left-style: solid;
     border-right-width: 0; } }
 
@@ -2427,7 +2427,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: #8bad93 transparent transparent;
+    border-color: #25cbaf transparent transparent;
     border-top-style: solid;
     border-bottom-width: 0;
     right: 5px;
@@ -2449,7 +2449,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #8bad93 transparent transparent;
+    border-color: transparent #25cbaf transparent transparent;
     border-right-style: solid;
     border-left-width: 0; }
   .dropdown.menu.large-vertical > li.opens-right > a::after {
@@ -2458,7 +2458,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #8bad93;
+    border-color: transparent transparent transparent #25cbaf;
     border-left-style: solid;
     border-right-width: 0; } }
 
@@ -2507,7 +2507,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent #8bad93 transparent transparent;
+    border-color: transparent #25cbaf transparent transparent;
     border-right-style: solid;
     border-left-width: 0; }
   .is-dropdown-submenu .is-dropdown-submenu-parent.opens-right > a::after {
@@ -2516,7 +2516,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #8bad93;
+    border-color: transparent transparent transparent #25cbaf;
     border-left-style: solid;
     border-right-width: 0; }
   .is-dropdown-submenu .is-dropdown-submenu {
@@ -2554,8 +2554,8 @@ select {
   white-space: nowrap;
   cursor: default;
   border-radius: 0;
-  background: #8bad93;
-  color: #0a0a0a; }
+  background: #25cbaf;
+  color: #fefefe; }
   .label.secondary {
     background: #777;
     color: #fefefe; }
@@ -2669,7 +2669,7 @@ select {
     margin-left: 1rem; }
   .menu .active > a {
     color: #fefefe;
-    background: #8bad93; }
+    background: #25cbaf; }
 
 .menu-text {
   font-weight: bold;
@@ -2713,7 +2713,7 @@ body {
 .off-canvas-content,
 .off-canvas-content {
   min-height: 100%;
-  background: #fefefe;
+  background: #333333;
   transition: transform 0.5s ease;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
@@ -2885,8 +2885,8 @@ body {
       background: #e6e6e6; }
   .pagination .current {
     padding: 0.1875rem 0.625rem;
-    background: #8bad93;
-    color: #0a0a0a;
+    background: #25cbaf;
+    color: #fefefe;
     cursor: default; }
   .pagination .disabled {
     padding: 0.1875rem 0.625rem;
@@ -2917,7 +2917,7 @@ body {
   margin-bottom: 1rem;
   border-radius: 0; }
   .progress.primary .progress-meter {
-    background-color: #8bad93; }
+    background-color: #25cbaf; }
   .progress.secondary .progress-meter {
     background-color: #777; }
   .progress.success .progress-meter {
@@ -2932,7 +2932,7 @@ body {
   display: block;
   width: 0%;
   height: 100%;
-  background-color: #8bad93; }
+  background-color: #25cbaf; }
 
 .progress-meter-text {
   position: absolute;
@@ -2984,7 +2984,7 @@ body {
   display: inline-block;
   width: 1.4rem;
   height: 1.4rem;
-  background-color: #8bad93;
+  background-color: #25cbaf;
   transition: all 0.2s ease-in-out;
   -ms-touch-action: manipulation;
       touch-action: manipulation;
@@ -2992,7 +2992,7 @@ body {
   [data-whatinput='mouse'] .slider-handle {
     outline: 0; }
   .slider-handle:hover {
-    background-color: #709a79; }
+    background-color: #1fad95; }
   .slider-handle.is-dragging {
     transition: all 0s linear; }
 
@@ -3182,7 +3182,7 @@ html.is-reveal-open body {
     transform: translate3d(0, 0, 0);
     border-radius: 0; }
   input:checked ~ .switch-paddle {
-    background: #8bad93; }
+    background: #25cbaf; }
     input:checked ~ .switch-paddle::after {
       left: 2.25rem; }
   [data-whatinput='mouse'] input:focus ~ .switch-paddle {
@@ -3255,10 +3255,10 @@ table {
     padding: 0.5rem 0.625rem 0.625rem; }
   table thead {
     background: #f8f8f8;
-    color: #0a0a0a; }
+    color: #fefefe; }
   table tfoot {
     background: #f1f1f1;
-    color: #0a0a0a; }
+    color: #fefefe; }
   table thead tr,
   table tfoot tr {
     background: transparent; }
@@ -3331,11 +3331,11 @@ table.hover tbody tr:nth-of-type(even):hover {
     background: transparent; }
 
 .tabs.primary {
-  background: #8bad93; }
+  background: #25cbaf; }
   .tabs.primary > li > a {
-    color: #0a0a0a; }
+    color: #fefefe; }
     .tabs.primary > li > a:hover, .tabs.primary > li > a:focus {
-      background: #82a78a; }
+      background: #23c1a6; }
 
 .tabs-title {
   float: left; }
@@ -3375,11 +3375,11 @@ table.hover tbody tr:nth-of-type(even):hover {
   border-radius: 0;
   margin-bottom: 1rem; }
   .thumbnail:hover, .thumbnail:focus {
-    box-shadow: 0 0 6px 1px rgba(139, 173, 147, 0.5); }
+    box-shadow: 0 0 6px 1px rgba(37, 203, 175, 0.5); }
 
 .title-bar {
   background: #fefefe;
-  color: #8bad93;
+  color: #25cbaf;
   padding: 0.5rem; }
   .title-bar::before, .title-bar::after {
     content: ' ';
