--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -49,7 +49,7 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #8bad93,
+  primary: #25cbaf,
   secondary: #777,
   success: #3adb76,
   warning: #ffae00,
@@ -60,8 +60,8 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
-$body-background: $white;
-$body-font-color: $black;
+$body-background: #333333;
+$body-font-color: $white;
 $body-font-family: "Raleway","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
