--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -52,6 +52,7 @@ h1, h2, h3, h4, h5, h6 {
 .horizontal-list li {
   display: inline-block;
   list-style-type: none;
+  margin-left: 0.5%;
 }
 
 .divider hr{
