Changed to light theme

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,2 +1,4 @@
-<li><a href="{{ site.url }}">Home</a></li>
-<li><a href="https://github.com/AnaghSharma/anaghsharma.github.io">Source</a></li>
+<ul class="horizontal-list text-center">
+    <li class="right"><a href="{{ site.url }}">Home</a></li>
+    <li class="right"><a href="https://github.com/AnaghSharma/anaghsharma.github.io">Source</a></li>
+</ul>
