--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -60,8 +60,8 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
-$body-background: #333333;
-$body-font-color: $white;
+$body-background: $white;
+$body-font-color: $black;
 $body-font-family: "Raleway","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
