Fixed divider coming over ovals issue

--- a/css/app.css
+++ b/css/app.css
@@ -4112,15 +4112,19 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border: 10px solid #0a0a0a;
-  fill: #fefefe; }
+  background: #ffffff; }
 
 .horizontal-list li {
   display: inline-block;
   list-style-type: none;
-  margin-left: 0.5%; }
+  margin-left: 0.2%; }
 
 .divider hr {
   max-width: 100%;
   margin-top: 160px;
   opacity: 0.3;
   background: #0a0a0a; }
+
+.overlay-up {
+  position: relative;
+  margin-top: -1%; }
