--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -62,7 +62,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: "Raleway","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
+$body-font-family: "Roboto",Arial,sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -102,6 +102,8 @@ $block-grid-max: 8;
 // 4. Base Typography
 // ------------------
 
+$font-family-sans-serif: $body-font-family;
+$font-family-serif: "Playfair Display", serif;
 $header-font-family: $body-font-family;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
