--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<ul class="horizontal-list text-center">
-    <li class="right"><a href="{{ site.url }}">Home</a></li>
-    <li class="right"><a href="https://github.com/AnaghSharma/anaghsharma.github.io">Source</a></li>
+<ul class="horizontal-list navbar-list">
+    <li><a href="https://github.com/AnaghSharma/anaghsharma.github.io">SOURCE</a></li>
+    <li><a href="{{ site.url }}">HOME</a></li>
 </ul>
