--- a/css/app.css
+++ b/css/app.css
@@ -4081,10 +4081,10 @@ h1, h2, h3, h4, h5, h6 {
 .font-weight-normal {
   font-weight: 400; }
 
-.font-bold {
-  font-weight: 700; }
+.font-medium {
+  font-weight: 500; }
 
-.font-heavy {
+.font-bold {
   font-weight: 800; }
 
 .quiet {
