--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="description" content="{{ site.name }} / {{ page.title }}" />
     <meta name="keywords" content="{{ page.keywords }}, {{ site.keywords }}" />
     <link rel="stylesheet" href="css/app.css">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="assets/favicon.ico">
 
     <!-- Open Graph: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/
     Twitter: https://dev.twitter.com/docs/cards/types/summary-card
