Updated SOURCE nav to open in new tab

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
 <ul class="horizontal-list navbar-list">
-    <li><a href="https://github.com/AnaghSharma/anaghsharma.github.io">SOURCE</a></li>
+    <li><a href="https://github.com/AnaghSharma/anaghsharma.github.io" target="_blank">SOURCE</a></li>
     <li><a href="{{ site.url }}">HOME</a></li>
 </ul>
