--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -86,7 +86,7 @@ ul {
 }
 
 .hero-row {
-  margin-top: 8em;
+  margin-top: 8rem;
 }
 
 .horizontal-bar {
@@ -102,6 +102,11 @@ ul {
   font-size: 4em;
   display: inline-block;
   margin-left: -1.4rem;
+}
+
+.hero-text {
+  margin-top: 8rem;
+  font-size: 1em;
 }
 
 @media only screen and (max-width: 460px) {
