Added action bar at home page

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
-  border: 10px solid $black;
+  border: 9px solid $black;
   background: #ffffff;
 }
 
@@ -105,8 +105,31 @@ ul {
 }
 
 .hero-text {
-  margin-top: 8rem;
+  margin-top: 6rem;
   font-size: 1em;
+}
+
+.hero-action {
+  height: 6rem;
+  margin-top: 4rem;
+  background: $black;
+  border-radius: 2px;
+}
+
+.action-list {
+  padding-top: 2rem;
+  li a {
+  color: $white;
+  padding: 1.2rem;
+  }
+}
+
+.action-list li {
+  :hover {
+      text-decoration: none;
+      border-bottom: 3px solid $white;
+      padding-bottom: 6px;
+    }
 }
 
 @media only screen and (max-width: 460px) {
