--- a/css/app.css
+++ b/css/app.css
@@ -4106,7 +4106,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
-  border: 10px solid #212121;
+  border: 9px solid #212121;
   background: #ffffff; }
 
 ul {
@@ -4157,8 +4157,25 @@ ul {
   margin-left: -1.4rem; }
 
 .hero-text {
-  margin-top: 8rem;
+  margin-top: 6rem;
   font-size: 1em; }
+
+.hero-action {
+  height: 6rem;
+  margin-top: 4rem;
+  background: #212121;
+  border-radius: 2px; }
+
+.action-list {
+  padding-top: 2rem; }
+  .action-list li a {
+    color: #fefefe;
+    padding: 1.2rem; }
+
+.action-list li :hover {
+  text-decoration: none;
+  border-bottom: 3px solid #fefefe;
+  padding-bottom: 6px; }
 
 @media only screen and (max-width: 460px) {
   .horizontal-bar {
