Added an About page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,3 @@
 <ul class="horizontal-list navbar-list">
-    <li><a href="https://github.com/AnaghSharma/anaghsharma.github.io" target="_blank">SOURCE</a></li>
-    <li><a href="{{ site.url }}">HOME</a></li>
+    <li><a href="{{ site.url }}/about">ABOUT</a></li>
 </ul>
