--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     <title>{{ site.name }} / {{ page.title }}</title>
     <meta name="description" content="{{ site.name }} / {{ page.title }}" />
     <meta name="keywords" content="{{ page.keywords }}, {{ site.keywords }}" />
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="stylesheet" href="{{ site.url }}/css/app.css">
+    <link rel="shortcut icon" href="{{ site.url }}/assets/favicon.ico">
 
     <!-- Open Graph: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/
     Twitter: https://dev.twitter.com/docs/cards/types/summary-card
@@ -48,10 +48,10 @@
     <!-- Loading JavaScripts
     ================================================== -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.js"><\/script>')</script>
-    <script src="bower_components/what-input/what-input.js"></script>
-    <script src="bower_components/foundation-sites/dist/foundation.js"></script>
-    <script src="js/app.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ site.url }}/bower_components/jquery/dist/jquery.js"><\/script>')</script>
+    <script src="{{ site.url }}/bower_components/what-input/what-input.js"></script>
+    <script src="{{ site.url }}/bower_components/foundation-sites/dist/foundation.js"></script>
+    <script src="{{ site.url }}/js/app.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
