--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,9 @@
         </div>
       </div>
     {{ content }}
-
+    <div class="row expanded footer">
+      {% include footer.html %}
+    </div>
 
     <!-- Loading JavaScripts
     ================================================== -->
