--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -124,24 +124,6 @@ ul {
   }
 }
 
-@media only screen and (max-width: 460px) {
-  
-  .horizontal-bar {
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 1.5rem;
-    background: rgba(0,0,0,0.38);
-    width: 40px;
-    height: 5px;
-  }
-
-  .hero-title {
-  font-size: 2.3em;
-  display: inline-block;
-  margin-left: -1rem;
-  }
-}
-
 .footer {
   margin-top: 6rem;
   height: 4rem;
@@ -184,7 +166,7 @@ ul {
 
 .section-portfolio-background {
   background: rgba(238, 238, 238, 1);
-  height: 100rem;
+  height: 96rem;
   margin-top: 20rem;
   margin-left: 1%;
   margin-right: 1%;
@@ -192,8 +174,50 @@ ul {
 
 .portfolio-project-card {
   height: 24rem;
+  margin-bottom: 1.8rem;
   position: relative;
   top: -12rem;
   background: #FFFFFF;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+}
+
+.medium-heading {
+  font-size: 0.8em;
+  color: rgba(0,0,0,0.54);
+}
+
+.sidebar {
+  background: #333333;
+  height: 20rem;
+  margin-right: 1rem;
+}
+
+.custom-action-button {
+  background: $black;
+  padding: 18px 24px;
+  color: $white;
+  font-size: 0.8em;
+}
+
+.custom-action-button:hover {
+  color: $white;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 460px) {
+  
+  .horizontal-bar {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 1.5rem;
+    background: rgba(0,0,0,0.38);
+    width: 40px;
+    height: 5px;
+  }
+
+  .hero-title {
+  font-size: 2.3em;
+  display: inline-block;
+  margin-left: -1rem;
+  }
 }
