Updated footer and cards style

--- a/css/app.css
+++ b/css/app.css
@@ -4174,7 +4174,6 @@ ul {
 
 .footer {
   margin-top: 6rem;
-  height: 4rem;
   width: 100%;
   background: #212121; }
   .footer p {
@@ -4186,7 +4185,7 @@ ul {
   .footer ul {
     margin-top: 1rem;
     margin-left: -1.2rem;
-    margin-bottom: 0; }
+    margin-bottom: 1rem; }
   .footer li {
     margin: 5px 24px; }
     .footer li :hover {
@@ -4218,7 +4217,13 @@ ul {
   position: relative;
   top: -12rem;
   background: #FFFFFF;
+  border-radius: 2px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24); }
+
+.portfolio-project-card:hover {
+  z-index: 2;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
+  transition: box-shadow 0.2s ease; }
 
 .medium-heading {
   font-size: 0.8em;
