--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -94,7 +94,8 @@ $grid-row-width: $global-width;
 $grid-column-count: 12;
 $grid-column-gutter: (
   small: 20px,
-  medium: 30px,
+  medium: 8px,
+  large: 8px,
 );
 $grid-column-align-edge: true;
 $block-grid-max: 8;
