--- a/css/app.css
+++ b/css/app.css
@@ -4228,6 +4228,7 @@ ul {
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24); }
 
 .portfolio-project-card:hover {
+  cursor: pointer;
   z-index: 2;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
   transition: box-shadow 0.2s ease; }
