--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -181,6 +181,7 @@ ul {
 }
 
 .portfolio-project-card:hover {
+  cursor: pointer;
   z-index: 2;
   box-shadow: 0 0 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
   transition: box-shadow 0.2s ease;
