--- a/css/app.css
+++ b/css/app.css
@@ -4095,6 +4095,9 @@ h1, h2, h3, h4, h5, h6 {
 .font-bold {
   font-weight: 800; }
 
+.font-dark-theme {
+  color: #fefefe; }
+
 .quiet {
   font-size: 80%; }
 
@@ -4204,12 +4207,20 @@ ul {
     color: #fefefe;
     font-size: 0.9em; }
 
-.section-heading-bar {
+.section-heading-bar-light {
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: -1.2rem;
   background: #e8e8e8;
+  height: 12px; }
+
+.section-heading-bar-dark {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -1.2rem;
+  background: rgba(0, 0, 0, 0.38);
   height: 12px; }
 
 .section-portfolio-background {
@@ -4251,6 +4262,19 @@ ul {
 .custom-action-button:hover {
   color: #fefefe;
   text-decoration: none; }
+
+.section-room-background {
+  background: #333333;
+  margin-top: 20rem;
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-top: 8rem;
+  padding-bottom: 8rem; }
+
+.center-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
 
 @media only screen and (max-width: 460px) {
   .horizontal-bar {
