--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -19,6 +19,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 800;
 }
 
+.font-dark-theme {
+  color: $white;
+}
+
 .quiet {
   font-size: 80%;
 }
@@ -154,12 +158,21 @@ ul {
   }
 }
 
-.section-heading-bar {
+.section-heading-bar-light {
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: -1.2rem;
   background: #e8e8e8;
+  height: 12px;
+}
+
+.section-heading-bar-dark {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -1.2rem;
+  background: rgba(0,0,0,0.38);
   height: 12px;
 }
 
@@ -208,6 +221,21 @@ ul {
 .custom-action-button:hover {
   color: $white;
   text-decoration: none;
+}
+
+.section-room-background {
+  background: #333333;
+  margin-top: 20rem;
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+.center-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media only screen and (max-width: 460px) {
