Added a section for blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 
   <body>
     <div class="row expanded header divider">
-        <hr/>
+        <hr style="margin-top:160px;"</hr>
       </div>
       <div class="row overlay-up">
         <div class="large-8 small-8 columns">
