--- a/css/app.css
+++ b/css/app.css
@@ -4148,7 +4148,6 @@ ul {
 
 .divider hr {
   max-width: 100%;
-  margin-top: 160px;
   opacity: 0.3;
   background: #212121; }
 
@@ -4268,6 +4267,11 @@ ul {
 .custom-action-button:hover {
   color: #fefefe;
   text-decoration: none; }
+
+.blog-hero-image {
+  width: 100%;
+  max-height: 100%;
+  object-fit: contain; }
 
 .section-room-background {
   background: #333333;
