--- a/css/app.css
+++ b/css/app.css
@@ -4268,14 +4268,31 @@ ul {
   color: #fefefe;
   text-decoration: none; }
 
-.blog-hero-image {
+#blog-home-container {
+  position: relative;
+  height: 360px;
+  width: 100%;
+  margin-top: 20px;
+  margin-right: 20px;
+  background: #ededed; }
+
+.blog-home-image {
   width: 100%;
   max-height: 100%;
-  object-fit: contain; }
+  object-fit: cover; }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #212121;
+  opacity: 0.5; }
 
 .section-room-background {
   background: #333333;
-  margin-top: 20rem;
+  margin-top: 10rem;
   margin-left: 1%;
   margin-right: 1%;
   padding-top: 8rem;
