--- a/css/app.css
+++ b/css/app.css
@@ -4257,16 +4257,49 @@ ul {
   height: 20rem;
   margin-right: .25rem; }
 
-.custom-action-button {
+.action-button {
+  box-sizing: border-box;
+  text-decoration: none;
   background: #212121;
   padding: 18px 24px;
   color: #fefefe;
   font-size: 0.8em;
-  text-align: center; }
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
 
-.custom-action-button:hover {
+.action-button:hover {
   color: #fefefe;
-  text-decoration: none; }
+  text-decoration: none;
+  z-index: 2;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24); }
+
+.action-button:active {
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24); }
+
+.action-button-light {
+  box-sizing: border-box;
+  text-decoration: none;
+  background: #fefefe;
+  padding: 18px 24px;
+  color: #212121;
+  font-size: 0.8em;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.action-button-light:hover {
+  color: #212121;
+  text-decoration: none;
+  z-index: 2;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24); }
+
+.action-button-light:active {
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24); }
 
 #blog-home-container {
   position: relative;
