--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -216,17 +216,54 @@ ul {
   margin-right: .25rem;
 }
 
-.custom-action-button {
+.action-button {
+  box-sizing: border-box;
+  text-decoration: none;
   background: $black;
   padding: 18px 24px;
   color: $white;
   font-size: 0.8em;
   text-align: center;
+  -webkit-user-select: none;  
+  -moz-user-select: none;    
+  -ms-user-select: none;      
+  user-select: none;
 }
 
-.custom-action-button:hover {
+.action-button:hover {
   color: $white;
   text-decoration: none;
+  z-index: 2;
+  box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+}
+
+.action-button:active {
+  box-shadow: 0 0 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
+}
+
+.action-button-light {
+  box-sizing: border-box;
+  text-decoration: none;
+  background: $white;
+  padding: 18px 24px;
+  color: $black;
+  font-size: 0.8em;
+  text-align: center;
+  -webkit-user-select: none;  
+  -moz-user-select: none;    
+  -ms-user-select: none;      
+  user-select: none;
+}
+
+.action-button-light:hover {
+  color: $black;
+  text-decoration: none;
+  z-index: 2;
+  box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+}
+
+.action-button-light:active {
+  box-shadow: 0 0 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
 }
 
 #blog-home-container {
