--- a/css/app.css
+++ b/css/app.css
@@ -4176,16 +4176,23 @@ ul {
   font-size: 1em; }
 
 .hero-action {
-  height: 6rem;
   margin-top: 4rem;
   background: #212121;
   border-radius: 2px; }
 
-.action-list {
-  padding-top: 2.2rem; }
-  .action-list li a {
-    color: #fefefe;
-    padding: 1.2rem; }
+.action-list li {
+  padding-top: 2.4rem;
+  padding-bottom: 2.4rem;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem; }
+
+.action-list a {
+  color: #fefefe; }
+
+.action-list a:hover {
+  text-decoration: none;
+  border-bottom: 3px solid #fefefe;
+  padding-bottom: 6px; }
 
 .footer {
   margin-top: 6rem;
@@ -4331,7 +4338,7 @@ ul {
   padding-top: 8rem;
   padding-bottom: 8rem; }
 
-.center-image {
+.center-element {
   display: block;
   margin-left: auto;
   margin-right: auto; }
