--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -119,17 +119,25 @@ ul {
 }
 
 .hero-action {
-  height: 6rem;
   margin-top: 4rem;
   background: $black;
   border-radius: 2px;
 }
 
 .action-list {
-  padding-top: 2.2rem;
-  li a {
+  li {
+    padding-top: 2.4rem;
+    padding-bottom: 2.4rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+  }
+  a {
   color: $white;
-  padding: 1.2rem;
+  }
+  a:hover {
+    text-decoration: none;
+    border-bottom: 3px solid $white;
+    padding-bottom: 6px;
   }
 }
 
@@ -300,7 +308,7 @@ ul {
   padding-bottom: 8rem;
 }
 
-.center-image {
+.center-element {
   display: block;
   margin-left: auto;
   margin-right: auto;
