--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -246,8 +246,37 @@ ul {
 
 .sidebar {
   background: #333333;
-  height: 20rem;
+  background-image: url("/assets/images/ovals-background.png");
+  padding-top: 32px;
+  padding-bottom: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-right: .25rem;
+}
+
+.featured-list {
+  padding: 0;
+  margin-bottom: 0;
+  margin-top: 12px;
+  li {
+    list-style: none;
+  }
+  h6 {
+    opacity: 0.7;
+    margin-bottom: 0;
+  }
+  a {
+    display: inline-block;
+    color: $white;
+    margin-top: 8px;
+    margin-bottom: 24px;
+    font-size: 0.9em;
+    line-height: 1.4;
+  }
+  .disabled {
+    pointer-events: none;
+    cursor: default;
+  }
 }
 
 .action-button {
