Updated the background image of sidebar

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -247,6 +247,8 @@ ul {
 .sidebar {
   background: #333333;
   background-image: url("/assets/images/ovals-background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   padding-top: 32px;
   padding-bottom: 0px;
   padding-left: 20px;
