--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -250,7 +250,7 @@ ul {
   color: rgba(0,0,0,0.54);
 }
 
-.sidebar {
+.sidebar-featured {
   background: #333333;
   background-image: url("/assets/images/ovals-background.png");
   background-size: cover;
@@ -259,7 +259,6 @@ ul {
   padding-bottom: 0px;
   padding-left: 20px;
   padding-right: 20px;
-  margin-right: .25rem;
 }
 
 .featured-list {
@@ -339,10 +338,9 @@ ul {
 
 #blog-home-container {
   position: relative;
-  height:360px; 
+  height: 24rem;
   width:100%;
   margin-top:20px;
-  margin-right: 20px;
   background: #ededed;
 }
 
@@ -360,6 +358,28 @@ ul {
   left: 0;
   background: $black;
   opacity: 0.5;
+}
+
+.sidebar-articles {
+  padding-top: 0px;
+  padding-left: 0px;
+  margin-bottom: 0;
+  margin-top: 12px;
+  li {
+    list-style: none;
+  }
+  h6 {
+    opacity: 0.7;
+    margin-bottom: 24px;
+  }
+  a {
+    display: inline-block;
+    margin-top: 8px;
+    margin-bottom: 16px;
+    font-size: 0.9em;
+    line-height: 1.4;
+  }
+
 }
 
 .section-room-background {
