--- a/css/app.css
+++ b/css/app.css
@@ -4359,7 +4359,10 @@ ul {
 .action-button-light:active {
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24); }
 
-#blog-home-container {
+.no-hyperlink a:hover {
+  text-decoration: none; }
+
+.blog-home-container {
   position: relative;
   height: 24rem;
   width: 100%;
@@ -4404,11 +4407,6 @@ ul {
   margin-right: 1%;
   padding-top: 8rem;
   padding-bottom: 8rem; }
-
-.center-element {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
 
 @media only screen and (max-width: 460px) {
   .horizontal-bar {
