--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -336,7 +336,11 @@ ul {
   box-shadow: 0 0 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
 }
 
-#blog-home-container {
+.no-hyperlink a:hover {
+  text-decoration: none;
+}
+
+.blog-home-container {
   position: relative;
   height: 24rem;
   width:100%;
@@ -389,12 +393,6 @@ ul {
   margin-right: 1%;
   padding-top: 8rem;
   padding-bottom: 8rem;
-}
-
-.center-element {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 @media only screen and (max-width: 460px) {
